# searchops

./: CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
__dev/: calibration.py  check_sage_outcomes.py  debug_sage_mapping.py  scan_mgf_mzs.py
src/searchops/: get_data_in_project_example.py  sage.py
src/searchops/cli/: record_run.py  sage_filter.py  sage_pmsms_mapper.py  sage_score_mapper.py  sage_summarize.py  sage_summary.py  sage_write.py  tsv2parquet.py
src/searchops/validators/: sage.py
tests/: test_left_join_nans.py  test_record_run.py  test_sage_score_mapper.py
