[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchops"
version = "0.1.0"
description = "Tools for parsing and summarizing proteomics search engine results."
readme = "README.md"
authors = [
    {name = "MatteoLacki", email = "matteo.lacki@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "pandas",
    "tqdm",
    "numba",
    "numpy",
    "numba_progress",
    "timstofu",
]

[project.scripts]
sage-summary  = "searchops.cli.sage_summary:main"
sage-write    = "searchops.cli.sage_write:main"
tsv2parquet    = "searchops.cli.tsv2parquet:main"
sage-filter    = "searchops.cli.sage_filter:main"
sage-summarize     = "searchops.cli.sage_summarize:main"
sage-pmsms-mapper  = "searchops.cli.sage_pmsms_mapper:main"
sage_score_mapper  = "searchops.cli.sage_score_mapper:main"

[project.urls]
homepage   = "https://github.com/MatteoLacki/searchops.git"
repository = "https://github.com/MatteoLacki/searchops.git"

[tool.uv]
reinstall-package = ["searchops"]

[tool.setuptools.packages.find]
where = ["src"]
